# Geo_GCT

./: .gitignore  README.md  TESTS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/gct_pipeline/: __init__.py  converter.py  exporter.py  models.py  parser.py
tests/: conftest.py  test_converter.py  test_exporter.py  test_integration.py  test_parser.py
