[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gct-pipeline"
version = "0.1.0"
description = "GEO Series Matrix → GCT bioinformatics pipeline"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "mypy>=1.10", "ruff>=0.4"]
ui  = ["streamlit>=1.35", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
packages = ["gct_pipeline"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
